Fixed image overflow

--- a/pages/_home.scss
+++ b/pages/_home.scss
@@ -1,10 +1,7 @@
-.hero {
-    // background-image: url(/inspire-img/hero.jpg);
-    // background-size: cover;
-    // background-position: 50%;
-    // height: 152.562vh;
-    // width: 100vw;
+.hero-container {
+    overflow: hidden;
+}
 
-   
+.hero {
     width: 100vw;
 }
