--- a/styles/style.css
+++ b/styles/style.css
@@ -426,6 +426,10 @@ nav ul li {
   text-shadow: 0px 2px 1px rgba(25, 41, 40, 0.8);
 }
 
+.hero-container {
+  overflow: hidden;
+}
+
 .hero {
   width: 100vw;
 }
